--- a/src/personalCard/components/familyStatus/familyStatus.module.scss
+++ b/src/personalCard/components/familyStatus/familyStatus.module.scss
@@ -17,7 +17,7 @@ li{
 
 
 
-.Military{
+.Family{
     width: 72.6%;
     margin: auto;
     border-radius: 10px;
@@ -32,7 +32,7 @@ li{
     padding: 10px;
 }
 
-.Military_true{
+.Family_true{
     width: 72.6%;
     margin: auto;
     border-radius: 10px;
@@ -47,7 +47,7 @@ li{
     padding: 10px;
 }
 
-.MilitaryHeader{
+.FamilyHeader{
     display: flex;
     justify-content: space-between;
     padding-top: 36px;
@@ -89,34 +89,35 @@ li{
     cursor: pointer;
 }
 
-.Military_desc{
+.Family_desc{
     width: 90%;
     // height: 80%;
     margin: auto;
-    margin-left: 14%;
+    margin-left: 8%;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    padding-bottom: 30px;
 
     
 }
 
-.Military_list{
-    width: 400px;
+.Family_list{
+    width: 190px;
     text-align: left;
-    margin-top: 50px;
+    margin-top: 30px;
     margin-bottom: 30px;
 
 }
 
-.Military_title{   
+.Family_title{   
     font-family: "Inter", sans-serif;
-    font-size: 20px;
-    margin-bottom: 10px;
+    font-size: 19px;
+    margin-bottom: 30px;
     color: rgba(255, 255, 255, 1);
 }
 
-.Military_info{
+.Family_info{
     width: 100%;
     color:white;
     font-family: "Inter", sans-serif;
@@ -125,7 +126,7 @@ li{
     
 }
 
-.Military_change_block{
+.Family_change_block{
     border-top: 1px rgba(255, 255, 255, 0.4) solid;
     width: 100%;
     // margin: auto;
@@ -133,8 +134,8 @@ li{
     // margin-left: 50px;
 }
 
-.Military_info_change_inp{
-    width: 200px;
+.Family_info_change_inp{
+    width: 65%;
     height: 35px; 
    
     border-radius: 10px;
@@ -146,7 +147,7 @@ li{
     font-size: 20px;
 
 }
-.Military_info_change_inp:focus{
+.Family_info_change_inp:focus{
     outline: none;
 }
 
@@ -167,7 +168,46 @@ cursor: pointer;
 background-color: rgba(255, 255, 255, 1); }
 
 .change_btn_save{
-    width: 20%; 
+width: 270px; 
+height: 47px; 
+border-radius: 10px; 
+padding: 4px 25px; 
+border: none;
+margin-left: 10px;
+background: rgba(32, 115, 219, 1);
+cursor: pointer;
+}
+
+.Family_change_header{
+    width: 90%;
+    // height: 80%;
+    margin: auto;
+    margin-left: 8%;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding-bottom: 30px;
+    margin-top: 40px;
+}
+
+.Family_info_Header_inp{
+    width: 49%;
+    height: 35px; 
+   
+    border-radius: 10px;
+    border: 1px solid rgba(0, 0, 0, 0.3); 
+    padding: 4px 62px 4px 15px; 
+    margin-top: 10px; 
+    background-color: rgba(255, 255, 255, 0.1); 
+    color: white;
+    font-size: 20px;
+}
+.Family_info_Header_inp:focus{
+    outline: none;
+}
+
+.change_btn_add{
+    width: 192px; 
     height: 47px; 
     border-radius: 10px; 
     padding: 4px 25px; 
@@ -175,24 +215,23 @@ background-color: rgba(255, 255, 255, 1); }
     margin-left: 10px;
     background: rgba(32, 115, 219, 1);
     cursor: pointer;
-    }
-    
+}
+
 
 @media all and (max-width: 870px){
-    .Military{
-        margin-left: 9%;
-        margin-top: 6%;
-    }
-    .Military_true{
+    .Family{
         margin-left: 13%;
         margin-top: 6%;
-
+    }
+    .Family_true{
+        margin-left: 13%;
+        margin-top: 6%;
     }
 }
 
 @media all and (max-width: 450px){
     
-    .MilitaryHeader{
+    .FamilyHeader{
         display: block;
     }
     .change_btn_add{
@@ -205,11 +244,6 @@ background-color: rgba(255, 255, 255, 1); }
         width: 200px;
         margin-top: 10px;
      }
-     .Military_desc{
-        margin-left: 3%;
-     }
-     .Military_info_change_inp{
-        width: 150px;
-     }
-   
 }
+
+
