--- a/src/personalCard/components/DiplomaticRank/diplomaticRank.module.scss
+++ b/src/personalCard/components/DiplomaticRank/diplomaticRank.module.scss
@@ -1,23 +1,13 @@
-.wrapper{
-    width: 100%;
-    height: 100%;
-}
-
-body{
-    background: url('../../asset/3123124\ copy\ copy\ 3.png');
-}
-*{
-    margin: 0;
-    padding: 0;
-
-}
-li{
-    list-style-type: none;
-}
 
 
 
-.Military{
+
+
+
+
+
+
+.Diplomatic{
     width: 72.6%;
     margin: auto;
     border-radius: 10px;
@@ -32,26 +22,12 @@ li{
     padding: 10px;
 }
 
-.Military_true{
-    width: 72.6%;
-    margin: auto;
-    border-radius: 10px;
-    border: 1px solid #000000;
-    margin-top: 105px;
-    margin-left: 325px;
-    text-align: center;
-    position: relative;
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.019), rgba(0, 0, 0, 0.013)),
-    linear-gradient(0deg, rgba(255, 255, 255, 0.201), rgba(255, 255, 255, 0.201));
-    transition: 0.5s ease-in-out; 
-    padding: 10px;
-}
-
-.MilitaryHeader{
+.DiplomaticHeader{
     display: flex;
     justify-content: space-between;
     padding-top: 36px;
 }
+
 .header_left{
     display: flex;
     padding-left: 20px;
@@ -89,52 +65,40 @@ li{
     cursor: pointer;
 }
 
-.Military_desc{
-    width: 90%;
+.Diplomatic_desc{
+    width: 80%;
     // height: 80%;
     margin: auto;
-    margin-left: 14%;
+    margin-left: 5%;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-
-    
 }
 
-.Military_list{
-    width: 400px;
+.Diplomatic_list{
+    width: 250px;
     text-align: left;
     margin-top: 50px;
-    margin-bottom: 30px;
-
+    margin-bottom: 40px;
 }
 
-.Military_title{   
+.Diplomatic_title{
     font-family: "Inter", sans-serif;
-    font-size: 20px;
+    font-size: 19px;
     margin-bottom: 10px;
     color: rgba(255, 255, 255, 1);
 }
 
-.Military_info{
+.Diplomatic_info{
     width: 100%;
     color:white;
     font-family: "Inter", sans-serif;
     font-weight: 400;
     font-size: 20px;
-    
 }
 
-.Military_change_block{
-    border-top: 1px rgba(255, 255, 255, 0.4) solid;
-    width: 100%;
-    // margin: auto;
-    margin-top: 20px;
-    // margin-left: 50px;
-}
-
-.Military_info_change_inp{
-    width: 200px;
+.Diplomatic_info_change_inp{
+    width: 205px;
     height: 35px; 
    
     border-radius: 10px;
@@ -143,23 +107,25 @@ li{
     margin-top: 10px; 
     background-color: rgba(255, 255, 255, 0.1); 
     color: white;
-    font-size: 20px;
+    font-size: 18px;
 
 }
-.Military_info_change_inp:focus{
-    outline: none;
+.Diplomatic_info_change_inp:focus{
+    outline :none
+
 }
 
 .change_btn{
     width: 100%;
     display: flex;
     justify-content: end  ;
-    margin-top: 30px;
+    margin-top:30px;
     padding-bottom: 10px;
 }
 .change_btn_Cancel{
 width: 127px; 
 height: 47px; 
+
 border-radius: 10px; 
 padding: 4px 25px; 
 border: none;
@@ -167,7 +133,31 @@ cursor: pointer;
 background-color: rgba(255, 255, 255, 1); }
 
 .change_btn_save{
-    width: 20%; 
+width: 270px; 
+height: 47px; 
+border-radius: 10px; 
+padding: 4px 25px; 
+border: none;
+margin-left: 10px;
+background: rgba(32, 115, 219, 1);
+cursor: pointer;
+}
+
+.change_btn_download{
+width: 230px; 
+height: 47px; 
+border-radius: 10px; 
+padding: 4px 25px; 
+border: none;
+margin-left: 10px;
+background: rgba(32, 115, 219, 1);
+cursor: pointer;
+margin-top: 50px;
+}
+
+.change_btn_add{
+    margin-top: 150px;
+    width: 170px; 
     height: 47px; 
     border-radius: 10px; 
     padding: 4px 25px; 
@@ -175,41 +165,42 @@ background-color: rgba(255, 255, 255, 1); }
     margin-left: 10px;
     background: rgba(32, 115, 219, 1);
     cursor: pointer;
-    }
-    
+}
 
 @media all and (max-width: 870px){
-    .Military{
-        margin-left: 9%;
-        margin-top: 6%;
-    }
-    .Military_true{
-        margin-left: 13%;
-        margin-top: 6%;
-
-    }
-}
-
-@media all and (max-width: 450px){
+        .Diplomatic{
+            margin-left: 13%;
+            margin-top: 6%;
+        }
+        .Diplomatic_true{
+            margin-left: 13%;
+            margin-top: 6%;
     
-    .MilitaryHeader{
-        display: block;
+        }
     }
-    .change_btn_add{
-        margin-left: 0;
+    
+@media all and (max-width: 450px){
+        
+        .DiplomaticHeader{
+            display: block;
+        }
+        .change_btn_add{
+            margin-left: 0;
+        }
+        .change_btn{
+            display: block;
+        }
+        .change_btn_save{
+           width: 200px;
+           margin-top: 10px;
+        }
+        .Diplomatic_desc_footer{
+            margin-left: 0;
+        }
+        .Diplomatic_info_change_inp{
+            width: 130px;
+        }
+        .header_left_info{
+            font-size: 17px
+        }
     }
-    .change_btn{
-        display: block;
-    }
-    .change_btn_save{
-        width: 200px;
-        margin-top: 10px;
-     }
-     .Military_desc{
-        margin-left: 3%;
-     }
-     .Military_info_change_inp{
-        width: 150px;
-     }
-   
-}
