--- a/src/personalCard/components/Vacation/Vacation.module.scss
+++ b/src/personalCard/components/Vacation/Vacation.module.scss
@@ -17,7 +17,7 @@ li{
 
 
 
-.Military{
+.Vacation{
     width: 72.6%;
     margin: auto;
     border-radius: 10px;
@@ -32,7 +32,7 @@ li{
     padding: 10px;
 }
 
-.Military_true{
+.Vacation_true{
     width: 72.6%;
     margin: auto;
     border-radius: 10px;
@@ -47,7 +47,7 @@ li{
     padding: 10px;
 }
 
-.MilitaryHeader{
+.VacationHeader{
     display: flex;
     justify-content: space-between;
     padding-top: 36px;
@@ -89,34 +89,42 @@ li{
     cursor: pointer;
 }
 
-.Military_desc{
+.Vacation_desc{
     width: 90%;
     // height: 80%;
     margin: auto;
-    margin-left: 14%;
+    margin-left: 8%;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    padding-bottom: 30px;
 
     
 }
 
-.Military_list{
-    width: 400px;
+.Vacation_list{
+    width: 200px;
     text-align: left;
-    margin-top: 50px;
-    margin-bottom: 30px;
+    margin-top: 30px;
+    margin-bottom: 15px;
 
 }
 
-.Military_title{   
+.Vacation_list_true{
+    width: 300px;
+    text-align: left;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.Vacation_title{   
     font-family: "Inter", sans-serif;
-    font-size: 20px;
-    margin-bottom: 10px;
+    font-size: 19px;
+    margin-bottom: 20px;
     color: rgba(255, 255, 255, 1);
 }
 
-.Military_info{
+.Vacation_info{
     width: 100%;
     color:white;
     font-family: "Inter", sans-serif;
@@ -125,16 +133,16 @@ li{
     
 }
 
-.Military_change_block{
-    border-top: 1px rgba(255, 255, 255, 0.4) solid;
+.Vacation_change_block{
+    
     width: 100%;
     // margin: auto;
     margin-top: 20px;
     // margin-left: 50px;
 }
 
-.Military_info_change_inp{
-    width: 200px;
+.Vacation_info_change_inp{
+    width: 65%;
     height: 35px; 
    
     border-radius: 10px;
@@ -146,7 +154,7 @@ li{
     font-size: 20px;
 
 }
-.Military_info_change_inp:focus{
+.Vacation_info_change_inp:focus{
     outline: none;
 }
 
@@ -167,7 +175,45 @@ cursor: pointer;
 background-color: rgba(255, 255, 255, 1); }
 
 .change_btn_save{
-    width: 20%; 
+width: 270px; 
+height: 47px; 
+border-radius: 10px; 
+padding: 4px 25px; 
+border: none;
+margin-left: 10px;
+background: rgba(32, 115, 219, 1);
+cursor: pointer;
+}
+
+.Vacation_change_header{
+    width: 90%;
+    // height: 80%;
+    margin: auto;
+    margin-left: 8%;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding-bottom: 30px;
+    margin-top: 30px;
+}
+
+.Vacation_info_Header_inp{
+    width: 30%;
+    height: 35px; 
+   
+    border-radius: 10px;
+    border: 1px solid rgba(0, 0, 0, 0.3); 
+    padding: 4px 62px 4px 15px; 
+    background-color: rgba(255, 255, 255, 0.1); 
+    color: white;
+    font-size: 20px;
+}
+.Vacation_info_Header_inp:focus{
+    outline: none;
+}
+
+.change_btn_add{
+    width: 192px; 
     height: 47px; 
     border-radius: 10px; 
     padding: 4px 25px; 
@@ -176,40 +222,38 @@ background-color: rgba(255, 255, 255, 1); }
     background: rgba(32, 115, 219, 1);
     cursor: pointer;
     }
-    
 
 @media all and (max-width: 870px){
-    .Military{
-        margin-left: 9%;
-        margin-top: 6%;
-    }
-    .Military_true{
-        margin-left: 13%;
-        margin-top: 6%;
-
-    }
-}
-
-@media all and (max-width: 450px){
+        .Vacation{
+            margin-left: 13%;
+            margin-top: 6%;
+        }
+        .Vacation_true{
+            margin-left: 13%;
+            margin-top: 6%;
     
-    .MilitaryHeader{
-        display: block;
+        }
     }
-    .change_btn_add{
-        margin-left: 0;
+    
+@media all and (max-width: 450px){
+        
+        .VacationHeader{
+            display: block;
+        }
+        .change_btn_add{
+            margin-left: 0;
+        }
+        .change_btn{
+            display: block;
+        }
+        .change_btn_save{
+           width: 200px;
+           margin-top: 10px;
+        }
+        .Vacation_desc_footer{
+            margin-left: 0;
+        }
+        .Vacation_info_change_inp{
+            width: 130px;
+        }
     }
-    .change_btn{
-        display: block;
-    }
-    .change_btn_save{
-        width: 200px;
-        margin-top: 10px;
-     }
-     .Military_desc{
-        margin-left: 3%;
-     }
-     .Military_info_change_inp{
-        width: 150px;
-     }
-   
-}
