--- a/src/personalCard/components/activity/activity.module.scss
+++ b/src/personalCard/components/activity/activity.module.scss
@@ -17,12 +17,12 @@ li{
 
 
 
-.Military{
+.Activity{
     width: 72.6%;
     margin: auto;
     border-radius: 10px;
     border: 1px solid #000000;
-    margin-top: 305px;
+    margin-top: 155px;
     margin-left: 325px;
     text-align: center;
     position: relative;
@@ -32,7 +32,7 @@ li{
     padding: 10px;
 }
 
-.Military_true{
+.Activity_true{
     width: 72.6%;
     margin: auto;
     border-radius: 10px;
@@ -47,7 +47,7 @@ li{
     padding: 10px;
 }
 
-.MilitaryHeader{
+.ActivityHeader{
     display: flex;
     justify-content: space-between;
     padding-top: 36px;
@@ -89,34 +89,56 @@ li{
     cursor: pointer;
 }
 
-.Military_desc{
+.Activity_desc{
     width: 90%;
     // height: 80%;
     margin: auto;
-    margin-left: 14%;
+    margin-left: 5%;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    padding-bottom: 30px;
 
     
 }
 
-.Military_list{
-    width: 400px;
+.Activity_list{
+    width: 250px;
     text-align: left;
-    margin-top: 50px;
-    margin-bottom: 30px;
+    margin-top: 30px;
+    margin-bottom: 15px;
 
 }
 
-.Military_title{   
+.Activity_list_true{
+    width: 300px;
+    text-align: left;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.Activity_title{   
     font-family: "Inter", sans-serif;
-    font-size: 20px;
-    margin-bottom: 10px;
+    font-size: 19px;
+    margin-bottom: 20px;
     color: rgba(255, 255, 255, 1);
 }
 
-.Military_info{
+.Activity_title_sec{
+    font-family: "Inter", sans-serif;
+    font-size: 19px;
+    color: rgba(255, 255, 255, 1);
+    text-align: left;
+    margin-left: 70px;
+}
+.header_text{
+    font-family: "Inter", sans-serif;
+    font-size: 19px;
+    margin-bottom: 20px;
+    color: rgba(255, 255, 255, 1);
+}
+
+.Activity_info{
     width: 100%;
     color:white;
     font-family: "Inter", sans-serif;
@@ -125,16 +147,21 @@ li{
     
 }
 
-.Military_change_block{
-    border-top: 1px rgba(255, 255, 255, 0.4) solid;
+.Activity_change_block{
+    
     width: 100%;
     // margin: auto;
     margin-top: 20px;
     // margin-left: 50px;
 }
 
-.Military_info_change_inp{
-    width: 200px;
+.headerLeft{
+    width: 100%;
+    text-align: left;
+}
+
+.Activity_info_change_inp{
+    width: 65%;
     height: 35px; 
    
     border-radius: 10px;
@@ -146,10 +173,13 @@ li{
     font-size: 20px;
 
 }
-.Military_info_change_inp:focus{
+.Activity_info_change_inp:focus{
     outline: none;
 }
 
+.Activity_info_change_inp::placeholder{
+    color: white;
+}
 .change_btn{
     width: 100%;
     display: flex;
@@ -167,7 +197,46 @@ cursor: pointer;
 background-color: rgba(255, 255, 255, 1); }
 
 .change_btn_save{
-    width: 20%; 
+width: 270px; 
+height: 47px; 
+border-radius: 10px; 
+padding: 4px 25px; 
+border: none;
+margin-left: 10px;
+background: rgba(32, 115, 219, 1);
+cursor: pointer;
+}
+
+.Activity_change_header{
+    width: 90%;
+    // height: 80%;
+    margin: auto;
+    margin-left: 8%;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding-bottom: 30px;
+    margin-top: 30px;
+}
+
+.Activity_info_Header_inp{
+    width: 92%;
+    height: 35px; 
+   
+    border-radius: 10px;
+    border: 1px solid rgba(0, 0, 0, 0.3); 
+    padding: 4px 62px 4px 15px; 
+    background-color: rgba(255, 255, 255, 0.1); 
+    color: white;
+    font-size: 20px;
+}
+.Activity_info_Header_inp:focus{
+    outline: none;
+}
+
+
+.change_btn_add{
+    width: 192px; 
     height: 47px; 
     border-radius: 10px; 
     padding: 4px 25px; 
@@ -175,41 +244,59 @@ background-color: rgba(255, 255, 255, 1); }
     margin-left: 10px;
     background: rgba(32, 115, 219, 1);
     cursor: pointer;
+    
     }
     
 
-@media all and (max-width: 870px){
-    .Military{
-        margin-left: 9%;
-        margin-top: 6%;
-    }
-    .Military_true{
-        margin-left: 13%;
-        margin-top: 6%;
-
-    }
+.Activity_desc_footer{
+    display: flex;
+    width: 40%;
+    margin-left: 8%;
 }
 
-@media all and (max-width: 450px){
+.Activity_info_footer{
+    font-family: "Inter", sans-serif;
+    font-size: 19px;
+    margin-bottom: 10px;
+    color: rgba(255, 255, 255, 1);
+    text-align: left;
+    margin-left: 30px;
+}
+
+.change_btn_download{
+    width: 200px; 
+    height: 47px; 
+    border-radius: 10px; 
+    padding: 4px 25px; 
+    border: none;
+    background: rgba(32, 115, 219, 1);
+    cursor: pointer;
+    }
+
+    @media all and (max-width: 870px){
+        .Activity{
+            margin-left: 13%;
+            margin-top: 6%;
+        }
+        .Activity_true{
+            margin-left: 13%;
+            margin-top: 6%;
+        }
+    }
     
-    .MilitaryHeader{
-        display: block;
+    @media all and (max-width: 450px){
+        
+        .ActivityHeader{
+            display: block;
+        }
+        .change_btn_add{
+            margin-left: 0;
+        }
+        .change_btn{
+            display: block;
+        }
+        .change_btn_save{
+            width: 200px;
+            margin-top: 10px;
+         }
     }
-    .change_btn_add{
-        margin-left: 0;
-    }
-    .change_btn{
-        display: block;
-    }
-    .change_btn_save{
-        width: 200px;
-        margin-top: 10px;
-     }
-     .Military_desc{
-        margin-left: 3%;
-     }
-     .Military_info_change_inp{
-        width: 150px;
-     }
-   
-}
