--- a/src/personalCard/components/arrival/arrival.module.scss
+++ b/src/personalCard/components/arrival/arrival.module.scss
@@ -1,23 +1,5 @@
-.wrapper{
-    width: 100%;
-    height: 100%;
-}
 
-body{
-    background: url('../../asset/3123124\ copy\ copy\ 3.png');
-}
-*{
-    margin: 0;
-    padding: 0;
-
-}
-li{
-    list-style-type: none;
-}
-
-
-
-.Military{
+.Arriv{
     width: 72.6%;
     margin: auto;
     border-radius: 10px;
@@ -32,26 +14,12 @@ li{
     padding: 10px;
 }
 
-.Military_true{
-    width: 72.6%;
-    margin: auto;
-    border-radius: 10px;
-    border: 1px solid #000000;
-    margin-top: 105px;
-    margin-left: 325px;
-    text-align: center;
-    position: relative;
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.019), rgba(0, 0, 0, 0.013)),
-    linear-gradient(0deg, rgba(255, 255, 255, 0.201), rgba(255, 255, 255, 0.201));
-    transition: 0.5s ease-in-out; 
-    padding: 10px;
-}
-
-.MilitaryHeader{
+.ArrivHeader{
     display: flex;
     justify-content: space-between;
     padding-top: 36px;
 }
+
 .header_left{
     display: flex;
     padding-left: 20px;
@@ -89,51 +57,41 @@ li{
     cursor: pointer;
 }
 
-.Military_desc{
+
+
+.Arriv_desc{
     width: 90%;
     // height: 80%;
     margin: auto;
-    margin-left: 14%;
+    margin-left: 10%;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-
-    
 }
 
-.Military_list{
-    width: 400px;
+.Arriv_list{
+    width: 300px;
     text-align: left;
     margin-top: 50px;
-    margin-bottom: 30px;
-
+    margin-bottom: 40px;
 }
 
-.Military_title{   
+.Arriv_title{
     font-family: "Inter", sans-serif;
-    font-size: 20px;
+    font-size: 19px;
     margin-bottom: 10px;
     color: rgba(255, 255, 255, 1);
 }
 
-.Military_info{
+.Arriv_info{
     width: 100%;
     color:white;
     font-family: "Inter", sans-serif;
     font-weight: 400;
     font-size: 20px;
-    
 }
 
-.Military_change_block{
-    border-top: 1px rgba(255, 255, 255, 0.4) solid;
-    width: 100%;
-    // margin: auto;
-    margin-top: 20px;
-    // margin-left: 50px;
-}
-
-.Military_info_change_inp{
+.Arriv_info_change_inp{
     width: 200px;
     height: 35px; 
    
@@ -143,11 +101,11 @@ li{
     margin-top: 10px; 
     background-color: rgba(255, 255, 255, 0.1); 
     color: white;
-    font-size: 20px;
-
+    font-size: 18px;
 }
-.Military_info_change_inp:focus{
-    outline: none;
+.Arriv_info_change_inp:focus{
+    outline :none
+
 }
 
 .change_btn{
@@ -167,23 +125,23 @@ cursor: pointer;
 background-color: rgba(255, 255, 255, 1); }
 
 .change_btn_save{
-    width: 20%; 
-    height: 47px; 
-    border-radius: 10px; 
-    padding: 4px 25px; 
-    border: none;
-    margin-left: 10px;
-    background: rgba(32, 115, 219, 1);
-    cursor: pointer;
-    }
-    
+width: 270px; 
+height: 47px; 
+border-radius: 10px; 
+padding: 4px 25px; 
+border: none;
+margin-left: 10px;
+background: rgba(32, 115, 219, 1);
+cursor: pointer;
+}
+
 
 @media all and (max-width: 870px){
-    .Military{
-        margin-left: 9%;
+    .Arriv{
+        margin-left: 13%;
         margin-top: 6%;
     }
-    .Military_true{
+    .Arriv_true{
         margin-left: 13%;
         margin-top: 6%;
 
@@ -192,7 +150,7 @@ background-color: rgba(255, 255, 255, 1); }
 
 @media all and (max-width: 450px){
     
-    .MilitaryHeader{
+    .ArrivHeader{
         display: block;
     }
     .change_btn_add{
@@ -202,14 +160,16 @@ background-color: rgba(255, 255, 255, 1); }
         display: block;
     }
     .change_btn_save{
-        width: 200px;
-        margin-top: 10px;
-     }
-     .Military_desc{
-        margin-left: 3%;
-     }
-     .Military_info_change_inp{
-        width: 150px;
-     }
-   
+       width: 200px;
+       margin-top: 10px;
+    }
+    .Arriv_desc_footer{
+        margin-left: 0;
+    }
+    .Arriv_info_change_inp{
+        width: 130px;
+    }
+    .header_left_info{
+        font-size: 17px
+    }
 }
