--- a/src/personalCard/components/bodyCheck/bodyCheck.module.scss
+++ b/src/personalCard/components/bodyCheck/bodyCheck.module.scss
@@ -1,23 +1,13 @@
-.wrapper{
-    width: 100%;
-    height: 100%;
-}
-
-body{
-    background: url('../../asset/3123124\ copy\ copy\ 3.png');
-}
-*{
-    margin: 0;
-    padding: 0;
-
-}
-li{
-    list-style-type: none;
-}
 
 
 
-.Military{
+
+
+
+
+
+
+.BodyCheck{
     width: 72.6%;
     margin: auto;
     border-radius: 10px;
@@ -32,26 +22,12 @@ li{
     padding: 10px;
 }
 
-.Military_true{
-    width: 72.6%;
-    margin: auto;
-    border-radius: 10px;
-    border: 1px solid #000000;
-    margin-top: 105px;
-    margin-left: 325px;
-    text-align: center;
-    position: relative;
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.019), rgba(0, 0, 0, 0.013)),
-    linear-gradient(0deg, rgba(255, 255, 255, 0.201), rgba(255, 255, 255, 0.201));
-    transition: 0.5s ease-in-out; 
-    padding: 10px;
-}
-
-.MilitaryHeader{
+.BodyCheckHeader{
     display: flex;
     justify-content: space-between;
     padding-top: 36px;
 }
+
 .header_left{
     display: flex;
     padding-left: 20px;
@@ -89,52 +65,40 @@ li{
     cursor: pointer;
 }
 
-.Military_desc{
-    width: 90%;
+.BodyCheck_desc{
+    width: 80%;
     // height: 80%;
     margin: auto;
-    margin-left: 14%;
+    margin-left: 12%;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-
-    
 }
 
-.Military_list{
-    width: 400px;
+.BodyCheck_list{
+    width: 320px;
     text-align: left;
     margin-top: 50px;
-    margin-bottom: 30px;
-
+    margin-bottom: 40px;
 }
 
-.Military_title{   
+.BodyCheck_title{
     font-family: "Inter", sans-serif;
-    font-size: 20px;
+    font-size: 19px;
     margin-bottom: 10px;
     color: rgba(255, 255, 255, 1);
 }
 
-.Military_info{
+.BodyCheck_info{
     width: 100%;
     color:white;
     font-family: "Inter", sans-serif;
     font-weight: 400;
     font-size: 20px;
-    
 }
 
-.Military_change_block{
-    border-top: 1px rgba(255, 255, 255, 0.4) solid;
-    width: 100%;
-    // margin: auto;
-    margin-top: 20px;
-    // margin-left: 50px;
-}
-
-.Military_info_change_inp{
-    width: 200px;
+.BodyCheck_info_change_inp{
+    width: 65%;
     height: 35px; 
    
     border-radius: 10px;
@@ -143,23 +107,25 @@ li{
     margin-top: 10px; 
     background-color: rgba(255, 255, 255, 0.1); 
     color: white;
-    font-size: 20px;
+    font-size: 18px;
 
 }
-.Military_info_change_inp:focus{
-    outline: none;
+.BodyCheck_info_change_inp:focus{
+    outline :none
+
 }
 
 .change_btn{
     width: 100%;
     display: flex;
     justify-content: end  ;
-    margin-top: 30px;
+    margin-top:30px;
     padding-bottom: 10px;
 }
 .change_btn_Cancel{
 width: 127px; 
 height: 47px; 
+
 border-radius: 10px; 
 padding: 4px 25px; 
 border: none;
@@ -167,32 +133,42 @@ cursor: pointer;
 background-color: rgba(255, 255, 255, 1); }
 
 .change_btn_save{
-    width: 20%; 
-    height: 47px; 
-    border-radius: 10px; 
-    padding: 4px 25px; 
-    border: none;
-    margin-left: 10px;
-    background: rgba(32, 115, 219, 1);
-    cursor: pointer;
-    }
-    
+width: 230px; 
+height: 47px; 
+border-radius: 10px; 
+padding: 4px 25px; 
+border: none;
+margin-left: 10px;
+background: rgba(32, 115, 219, 1);
+cursor: pointer;
+}
+
+.change_btn_download{
+width: 230px; 
+height: 47px; 
+border-radius: 10px; 
+padding: 4px 25px; 
+border: none;
+margin-left: 10px;
+background: rgba(32, 115, 219, 1);
+cursor: pointer;
+margin-top: 50px;
+}
 
 @media all and (max-width: 870px){
-    .Military{
-        margin-left: 9%;
-        margin-top: 6%;
-    }
-    .Military_true{
+    .BodyCheck{
         margin-left: 13%;
         margin-top: 6%;
-
+    }
+    .BodyCheck_true{
+        margin-left: 13%;
+        margin-top: 6%;
     }
 }
 
 @media all and (max-width: 450px){
     
-    .MilitaryHeader{
+    .BodyCheckHeader{
         display: block;
     }
     .change_btn_add{
@@ -205,11 +181,5 @@ background-color: rgba(255, 255, 255, 1); }
         width: 200px;
         margin-top: 10px;
      }
-     .Military_desc{
-        margin-left: 3%;
-     }
-     .Military_info_change_inp{
-        width: 150px;
-     }
-   
 }
+
