--- a/src/personalCard/components/staffing/Staffing.module.scss
+++ b/src/personalCard/components/staffing/Staffing.module.scss
@@ -17,7 +17,7 @@ li{
 
 
 
-.Military{
+.Staffing{
     width: 72.6%;
     margin: auto;
     border-radius: 10px;
@@ -32,7 +32,7 @@ li{
     padding: 10px;
 }
 
-.Military_true{
+.Staffing_true{
     width: 72.6%;
     margin: auto;
     border-radius: 10px;
@@ -47,7 +47,7 @@ li{
     padding: 10px;
 }
 
-.MilitaryHeader{
+.StaffingHeader{
     display: flex;
     justify-content: space-between;
     padding-top: 36px;
@@ -89,34 +89,48 @@ li{
     cursor: pointer;
 }
 
-.Military_desc{
+.Staffing_desc{
     width: 90%;
     // height: 80%;
     margin: auto;
-    margin-left: 14%;
+    margin-left: 8%;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    padding-bottom: 30px;
 
     
 }
 
-.Military_list{
-    width: 400px;
-    text-align: left;
-    margin-top: 50px;
-    margin-bottom: 30px;
+.Staffing_list{
+    width: 250px;
+    text-align: center;
+    margin-top: 30px;
+    margin-bottom: 15px;
 
 }
 
-.Military_title{   
+.Staffing_list_true{
+    width: 300px;
+    text-align: left;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.Staffing_title{   
     font-family: "Inter", sans-serif;
-    font-size: 20px;
-    margin-bottom: 10px;
+    font-size: 19px;
+    margin-bottom: 20px;
+    color: rgba(255, 255, 255, 1);
+}
+.header_text{
+    font-family: "Inter", sans-serif;
+    font-size: 19px;
+    margin-bottom: 20px;
     color: rgba(255, 255, 255, 1);
 }
 
-.Military_info{
+.Staffing_info{
     width: 100%;
     color:white;
     font-family: "Inter", sans-serif;
@@ -125,16 +139,21 @@ li{
     
 }
 
-.Military_change_block{
-    border-top: 1px rgba(255, 255, 255, 0.4) solid;
+.Staffing_change_block{
+    
     width: 100%;
     // margin: auto;
     margin-top: 20px;
     // margin-left: 50px;
 }
 
-.Military_info_change_inp{
-    width: 200px;
+.headerLeft{
+    width: 100%;
+    text-align: left;
+}
+
+.Staffing_info_change_inp{
+    width: 65%;
     height: 35px; 
    
     border-radius: 10px;
@@ -146,10 +165,13 @@ li{
     font-size: 20px;
 
 }
-.Military_info_change_inp:focus{
+.Staffing_info_change_inp:focus{
     outline: none;
 }
 
+.Staffing_info_change_inp::placeholder{
+    color: white;
+}
 .change_btn{
     width: 100%;
     display: flex;
@@ -167,7 +189,46 @@ cursor: pointer;
 background-color: rgba(255, 255, 255, 1); }
 
 .change_btn_save{
-    width: 20%; 
+width: 270px; 
+height: 47px; 
+border-radius: 10px; 
+padding: 4px 25px; 
+border: none;
+margin-left: 10px;
+background: rgba(32, 115, 219, 1);
+cursor: pointer;
+}
+
+.Staffing_change_header{
+    width: 90%;
+    // height: 80%;
+    margin: auto;
+    margin-left: 8%;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding-bottom: 30px;
+    margin-top: 30px;
+}
+
+.Staffing_info_Header_inp{
+    width: 70%;
+    height: 35px; 
+   
+    border-radius: 10px;
+    border: 1px solid rgba(0, 0, 0, 0.3); 
+    padding: 4px 62px 4px 15px; 
+    background-color: rgba(255, 255, 255, 0.1); 
+    color: white;
+    font-size: 20px;
+}
+.Staffing_info_Header_inp:focus{
+    outline: none;
+}
+
+
+.change_btn_add{
+    width: 192px; 
     height: 47px; 
     border-radius: 10px; 
     padding: 4px 25px; 
@@ -175,15 +236,33 @@ background-color: rgba(255, 255, 255, 1); }
     margin-left: 10px;
     background: rgba(32, 115, 219, 1);
     cursor: pointer;
+    
     }
     
 
+.Staffing_desc_footer{
+    display: flex;
+    width: 40%;
+    margin-left: 8%;
+    flex-wrap: wrap;
+}
+
+.Staffing_info_footer{
+    font-family: "Inter", sans-serif;
+    font-size: 19px;
+    margin-bottom: 10px;
+    color: rgba(255, 255, 255, 1);
+    text-align: left;
+    margin-left: 30px;
+}
+
+
 @media all and (max-width: 870px){
-    .Military{
-        margin-left: 9%;
+    .Staffing{
+        margin-left: 13%;
         margin-top: 6%;
     }
-    .Military_true{
+    .Staffing_true{
         margin-left: 13%;
         margin-top: 6%;
 
@@ -192,7 +271,7 @@ background-color: rgba(255, 255, 255, 1); }
 
 @media all and (max-width: 450px){
     
-    .MilitaryHeader{
+    .StaffingHeader{
         display: block;
     }
     .change_btn_add{
@@ -202,14 +281,10 @@ background-color: rgba(255, 255, 255, 1); }
         display: block;
     }
     .change_btn_save{
-        width: 200px;
-        margin-top: 10px;
-     }
-     .Military_desc{
-        margin-left: 3%;
-     }
-     .Military_info_change_inp{
-        width: 150px;
-     }
-   
+       width: 200px;
+       margin-top: 10px;
+    }
+    .Staffing_desc_footer{
+        margin-left: 0;
+    }
 }
