--- a/src/personalCard/personalCard.module.scss
+++ b/src/personalCard/personalCard.module.scss
@@ -4,7 +4,7 @@
 }
 
 body{
-    background: url('../asset/3123124\ copy\ copy\ 3.png');
+    background: url('./asset/3123124\ copy\ copy\ 3.png');
 }
 *{
     margin: 0;
@@ -16,7 +16,6 @@ li{
 }
 .Personal{
 width: 73.8%;
-height: 733px;
 margin: auto;
 border-radius: 10px;
 border: 1px solid #000000;
@@ -73,7 +72,7 @@ transition: 0.5s ease-in-out;
   margin: 0px;
 }
 .block_list{
-    width: 290px; 
+    width: 70%; 
     height: auto; 
     border-radius: 10px; 
     padding: 4px 62px; 
@@ -89,17 +88,58 @@ transition: 0.5s ease-in-out;
     cursor: pointer;
 }
 
-.military_registration{
-    width: 73.8%;
-height: 365px;
-margin: auto;
-border-radius: 10px;
-border: 1px solid #000000;
-margin-top: 210px;
-margin-left: 320px;
-text-align: center;
-position: relative;
-background: linear-gradient(0deg, rgba(0, 0, 0, 0.019), rgba(0, 0, 0, 0.013)),
-linear-gradient(0deg, rgba(255, 255, 255, 0.201), rgba(255, 255, 255, 0.201));
-transition: 0.5s ease-in-out;
+
+@media all and (max-width: 870px){
+    .Personal{
+        margin-left: 13%;
+        margin-top: 6%;
+    }
+    .Personal_true{
+        margin-left: 13%;
+        margin-top: 6%;
+
+    }
+    .block_list{
+        width: 80%;
+        font-size: 17px;
+    }
+    .Personal_info{
+        padding-top: 100px;
+    }
+}
+
+@media all and (max-width: 450px){
+    .Personal{
+        width: 100%;
+        margin-left: 0;
+        margin-top: 0;
+    }
+    .PersonalHeader{
+        display: block;
+    }
+    .change_btn_add{
+        margin-left: 0;
+    }
+    .change_btn{
+        display: block;
+    }
+    .change_btn_save{
+       width: 200px;
+       margin-top: 10px;
+    }
+    .Personal_desc_footer{
+        margin-left: 0;
+    }
+    .Personal_info_change_inp{
+        width: 130px;
+    }
+    .block_list{
+        margin-left: 0;
+        padding-left: 10px;
+        
+        
+    }
+    .block_desc{
+        padding-left: 0;
+    }
 }
